# nethint

./: .gitignore  .gitmodules  Cargo.toml  README.md  gen_allreduce_config.py  gen_hostfiles.py  run  run_allreduce  run_allreduce.sh  run_test.sh  rust-toolchain.toml  to_delete
allreduce/: Cargo.toml  experiment.toml
allreduce/src/: app.rs  argument.rs  config.rs  experiment.rs  lib.rs  main.rs  random_ring.rs  rat.rs  topology_aware.rs
allreduce_configs_for_paper/: 2slots.toml  4slots.toml  background_dynamic_strong.toml  background_dynamic_weak.toml  background_off.toml  background_static_strong.toml  level2bad.toml  level2bad_2.toml  more_overlap.toml  non_overlap.toml  probe_bad.toml  scale_down.toml  standard.toml  standard1.toml  standard2.toml
evaluation/allreduce_configs/: 2slots.toml  4slots.toml  background_dynamic_strong.toml  background_dynamic_weak.toml  background_off.toml  background_static_strong.toml  casestudy2.toml  level2bad.toml  level2bad_2.toml  mccs1.toml  mccs2.toml  more_overlap.toml  non_overlap.toml  nonnegligible_computing_overhead.toml  probe_bad.toml  run_all.sh  run_paper.sh  scale_down.toml  standard.toml  standard1.toml  standard2.toml  standard3.toml  standard3_pertenant.toml  standard3_pervm.toml  toycase2.toml
evaluation/herd_behavior/: allreduce_herd_base.toml  mapreduce_herd_base.toml  run_allreduce.sh  run_mapreduce.sh
evaluation/inaccuracy/: inaccuracy1_base.toml  inaccuracy2_base.toml  inaccuracy_base.toml  run_inaccuracy.sh  run_inaccuracy1.sh  run_inaccuracy2.sh
evaluation/mapreduce_configs/: background_dynamic_strong.toml  background_dynamic_weak.toml  background_off.toml  background_static_strong.toml  casestudy1.toml  fallback.toml  large_oversub.toml  large_oversub0.toml  level2probe.toml  probe_bad.toml  run_all.sh  run_paper.sh  standard_hybrid.toml  standard_hybrid1.toml  standard_hybrid2.toml  standard_hybrid3.toml  standard_hybrid4.toml
evaluation/model_serving_configs/: coarse_grained_workloads.toml  nonnegligible_computing_overhead.toml  run_paper.sh  standard2.toml
evaluation/rl_configs/: 2slots.toml  4slots.toml  background_dynamic_strong.toml  background_dynamic_weak.toml  background_off.toml  background_static_strong.toml  level2bad.toml  level2bad_2.toml  level2probe.toml  more_overlap.toml  non_overlap.toml  nonnegligible_computing_overhead.toml  probe_bad.toml  run_all.sh  run_paper.sh  scale_down.toml  standard.toml  standard1.toml  standard2.toml  standard3.toml
evaluation/sensitivity/: run_sensitivity_oversub.sh  run_sensitivity_probing_cost1.sh  run_sensitivity_probing_cost2.sh  run_sensitivity_rack_size.sh  sensitivity_oversub_base.toml  sensitivity_probing_cost1_base.toml  sensitivity_probing_cost1_baseline.toml  sensitivity_probing_cost2_base.toml  sensitivity_probing_cost2_baseline.toml  sensitivity_rack_size_base.toml
evaluation/spectrum/: inaccuracy_base.toml  run_spectrum1.sh  run_spectrum2.sh  run_spectrum3.sh  run_spectrum4.sh  run_spectrum5.sh  run_spectrum6.sh  spectrum1_base.toml  spectrum2_base.toml  spectrum3_base.toml  spectrum4_base.toml  spectrum5_base.toml  (+1 more)
examples/: logging.rs  mapreduce.rs
litemsg/: Cargo.toml
logging/: Cargo.toml
mapreduce/: Cargo.toml  FB2010-1Hr-150-0.txt  experiment.toml
mapreduce/src/: app.rs  argument.rs  config.rs  experiment.rs  genetic.rs  greedy.rs  inspect.rs  lib.rs  main.rs  mapper.rs  plink.rs  plot.rs  random.rs  topology.rs  trace.rs
mapreduce_configs_0228/: experiment1.toml  experiment10.toml  experiment11.toml  experiment12.toml  experiment2.toml  experiment3.toml  experiment4.toml  experiment5.toml  experiment6.toml  experiment7.toml  experiment8.toml  experiment9.toml  run_all.sh
mapreduce_configs_for_paper/: background_dynamic_strong.toml  background_dynamic_weak.toml  background_off.toml  background_static_strong.toml  large_oversub.toml  large_oversub0.toml  probe_bad.toml  run_all.sh  standard_hybrid.toml  standard_hybrid1.toml  standard_hybrid2.toml  standard_hybrid3.toml
mapreduce_configs_for_paper_0228/: background_dynamic_strong.toml  background_dynamic_weak.toml  background_off.toml  background_static_strong.toml  probe_bad.toml  run_all.sh  standard.toml
nethint/: Cargo.toml
nethint/src/: app.rs  architecture.rs  background_flow.rs  bandwidth.rs  brain.rs  cluster.rs  counterunit.rs  hint.rs  lib.rs  multitenant.rs  simulator.rs  timer.rs
nethint/tests/: alltoall.rs  toy1.rs
nhagent/: Cargo.toml
nhagent/src/: cluster.rs  communicator.rs  lib.rs  main.rs  message.rs  sampler.rs  utils.rs
nhagent/src/sampler/: mod.rs  ovs_sampler.rs  ss_sampler.rs
replayer/: Cargo.toml  README.md
replayer/src/: buffer.rs  endpoint.rs  launcher.rs  lib.rs  mapreduce.rs  message.rs  scheduler.rs
replayer/src/controller/: allreduce.rs  app.rs  background_flow.rs  main.rs  mapreduce.rs  mod.rs
replayer/src/worker/: main.rs
rl/: Cargo.toml  experiment.toml
rl_configs_for_paper/: 2slots.toml  4slots.toml  background_dynamic_weak.toml  background_off.toml  background_static_strong.toml  level2bad.toml  level2bad_2.toml  more_overlap.toml  non_overlap.toml  scale_down.toml  standard1.toml  standard2.toml
scripts/: InfoCollectOverHead.hs  Main.hs  background_flow_iperf.py  build_testbed_bins.sh  kill_background_flow.sh  recover_bandwidth_setting.sh  request-response.sh  run_duplicates.sh  run_duplicates_v2.sh  switch_fairness_to.sh
src/: bandwidth.rs  cluster.rs  lib.rs  main.rs
src/litemsg/: Cargo.toml
src/litemsg/examples/: request-response.rs
src/litemsg/src/: buffer.rs  command.rs  communicator.rs  endpoint.rs  lib.rs  utils.rs
src/nethint/: Cargo.toml
src/nethint/src/: app.rs  architecture.rs  background_flow.rs  background_flow_hard.rs  bandwidth.rs  brain.rs  cluster.rs  counterunit.rs  hint.rs  lib.rs  multitenant.rs  runtime_est.rs  simulator.rs  timer.rs
src/rl/: Cargo.toml  experiment.toml  testbed.toml
src/rl/src/: app.rs  config.rs  contraction.rs  experiment.rs  lib.rs  random_ring.rs  rat.rs  topology_aware.rs
tests/: alltoall.rs  logging.rs  mapreduce.rs  toy1.rs
utils/: Cargo.toml
(+137 files in other folders)
