[package]
name = "allreduce"
version = "0.1.0"
authors = ["Jingrong Chen <crazyboycjr@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
rand = "0.7.3"
gnuplot = "0.0.37"
nethint = { path = "../nethint" }
logging = { path = "../logging" }
structopt = "0.3.21"