[package]
name = "nhagent"
version = "0.1.0"
authors = ["Jingrong Chen <crazyboycjr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0.38"
logging = { path = "../logging" }
nethint = { path = "../nethint" }
litemsg = { path = "../litemsg" }
thiserror = "1.0.23"
lazy_static = "1.4.0"
bincode = "1.3.1"
serde = { version = "1.0.123", features = ["derive"] }

[dependencies.mio]
version = "0.6.23"
