[package]
name = "replayer"
version = "0.1.0"
authors = ["Jingrong Chen <crazyboycjr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
bincode = "1.3.1"
serde = { version = "1.0.123", features = ["derive"] }
logging = { path = "../logging" }
nethint = { path = "../nethint" }
structopt = "0.3.21"
nix = "0.19.1"

[dependencies.mio]
version = "0.6.23"


[[bin]]
name = "controller"
path = "src/controller/main.rs"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[[bin]]
name = "rplaunch"
path = "src/launcher.rs"
