[package]
name = "nethint"
version = "0.1.0"
authors = ["Jingrong Chen <crazyboycjr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.19"
petgraph = { version = "0.5.1", features = ["serde-1"] }
fnv = "1.0.7"
indexmap = "1.6.0"
structopt = "0.3.21"
thiserror = "1.0.22"
rand = "0.8.3"
smallvec = "1.5.1"
serde = { version = "1.0.120", features = ["derive"] }
toml = "0.5.8"
rand_distr = "0.4.0"
zipf = "7.0.0"
strum = "0.26.1"
strum_macros = "0.26.1"
utils = { path = "../utils" }

[dev-dependencies]
logging = { path = "../logging" }
